--- a/config.gradle
+++ b/config.gradle
@@ -1,9 +1,28 @@
+ext {
+    versionCode = 1
+    versionName = "1.0"
+}
+
+ext {
+    compileSdkVersion = 27
+    buildToolsVersion = "27.0.3"
+    minSdkVersion = 21
+    targetSdkVersion = 27
+}
+
 def kotlin_version = '1.2.41'
+def support_version = '27.1.1'
 
 ext.plugin = [
-        "kotlin": "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        "android": "com.android.tools.build:gradle:3.1.2",
+        "kotlin" : "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 ]
 
 ext.lib = [
-        "kotlin-stdlib": "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+        "kotlin-stdlib"       : "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version",
+        "appcompat"           : "com.android.support:appcompat-v7:$support_version",
+        "lifecycle-extensions": "android.arch.lifecycle:extensions:1.1.1",
+        "bugly"               : "com.tencent.bugly:crashreport:2.6.6",
+        "constraint-layout"   : "com.android.support.constraint:constraint-layout:1.0.2",
+        "cardview"              : "com.android.support:cardview-v7:$support_version"
 ]
