--- a/config.gradle
+++ b/config.gradle
@@ -24,5 +24,6 @@ ext.lib = [
         "lifecycle-extensions": "android.arch.lifecycle:extensions:1.1.1",
         "bugly"               : "com.tencent.bugly:crashreport:2.6.6",
         "constraint-layout"   : "com.android.support.constraint:constraint-layout:1.0.2",
-        "cardview"              : "com.android.support:cardview-v7:$support_version"
+        "cardview"            : "com.android.support:cardview-v7:$support_version",
+        "play-services-ads"   : "com.google.android.gms:play-services-ads:15.0.0"
 ]
