--- a/config.gradle
+++ b/config.gradle
@@ -10,16 +10,17 @@ ext {
     targetSdkVersion = 27
 }
 
-def kotlin_version = '1.2.41'
+def kotlin_version = '1.2.50'
 def support_version = '27.1.1'
 
 ext.plugin = [
-        "android": "com.android.tools.build:gradle:3.1.2",
+        "android": "com.android.tools.build:gradle:3.1.3",
         "kotlin" : "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 ]
 
 ext.lib = [
         "kotlin-stdlib"       : "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version",
+        "kotlin-coroutines-android":"org.jetbrains.kotlinx:kotlinx-coroutines-android:0.23.3",
         "appcompat"           : "com.android.support:appcompat-v7:$support_version",
         "lifecycle-extensions": "android.arch.lifecycle:extensions:1.1.1",
         "bugly"               : "com.tencent.bugly:crashreport:2.6.6",
