--- a/config.gradle
+++ b/config.gradle
@@ -21,10 +21,11 @@ ext.plugin = [
 ext.lib = [
         "kotlin-stdlib"       : "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version",
         "kotlin-coroutines-android":"org.jetbrains.kotlinx:kotlinx-coroutines-android:0.23.3",
-        "appcompat"           : "com.android.support:appcompat-v7:$support_version",
-        "lifecycle-extensions": "android.arch.lifecycle:extensions:1.1.1",
-        "bugly"               : "com.tencent.bugly:crashreport:2.6.6",
-        "constraint-layout"   : "com.android.support.constraint:constraint-layout:1.0.2",
-        "cardview"            : "com.android.support:cardview-v7:$support_version",
-        "play-services-ads"   : "com.google.android.gms:play-services-ads:15.0.0"
+        "appcompat"                : "com.android.support:appcompat-v7:$support_version",
+        "lifecycle-extensions"     : "android.arch.lifecycle:extensions:1.1.1",
+        "bugly"                    : "com.tencent.bugly:crashreport:2.6.6",
+        "constraint-layout"        : "com.android.support.constraint:constraint-layout:1.0.2",
+        "cardview"                 : "com.android.support:cardview-v7:$support_version",
+        "play-services-ads"        : "com.google.android.gms:play-services-ads:15.0.0",
+        "junit"                    : "junit:junit:4.11"
 ]
