--- a/lib-gomoku/build.gradle
+++ b/lib-gomoku/build.gradle
@@ -1,7 +1,21 @@
 apply plugin: 'kotlin'
+apply plugin: 'kotlin-kapt'
+
+sourceSets {
+    jmh {
+        compileClasspath += sourceSets.main.runtimeClasspath
+        runtimeClasspath += sourceSets.main.runtimeClasspath
+    }
+}
 
 dependencies {
     implementation lib["kotlin-stdlib"]
+    testImplementation lib["junit"]
+    jmhImplementation lib["jmh-core"]
+    kaptJmh lib["jmh-generator"]
+}
 
-    testCompile lib["junit"]
+task jmh(type: JavaExec) {
+    classpath = sourceSets.jmh.runtimeClasspath
+    main = 'org.openjdk.jmh.Main'
 }
