--- a/gomoku-ai/build.gradle
+++ b/gomoku-ai/build.gradle
@@ -2,27 +2,13 @@ apply plugin: 'kotlin'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'jacoco'
 
-sourceSets {
-    jmh {
-        compileClasspath += sourceSets.main.runtimeClasspath
-        runtimeClasspath += sourceSets.main.runtimeClasspath
-    }
-}
-
 jacoco {
     toolVersion = "0.8.5"
 }
 
 dependencies {
     implementation project(":gomoku")
-    testCompile lib["junit"]
-    jmhImplementation lib["jmh-core"]
-    kaptJmh lib["jmh-generator"]
-}
-
-task jmh(type: JavaExec) {
-    classpath = sourceSets.jmh.runtimeClasspath
-    main = 'org.openjdk.jmh.Main'
+    testImplementation 'junit:junit:4.13.2'
 }
 
 test {
