--- a/gomoku-ai/build.gradle
+++ b/gomoku-ai/build.gradle
@@ -8,7 +8,7 @@ jacoco {
 
 dependencies {
     implementation project(":gomoku")
-    testImplementation 'junit:junit:4.13.2'
+    testImplementation 'com.google.testparameterinjector:test-parameter-injector:1.1'
 }
 
 test {
